# szakdoga

./: .gitignore  DocumentationPlan.txt  ExampleForDoc.drawio  ExampleFotrDpc.drawio  Szakdolgozat dokumentáció.docx  img  main.py  notes.txt  pyproject.toml  requirements.txt  result.drawio  test.py  ~$akdolgozat dokumentáció.docx
